--- a/.github/workflows/update-readme-tomorrow.yml
+++ b/.github/workflows/update-readme-tomorrow.yml
@@ -67,13 +67,20 @@ jobs:
 
           EOF
 
-      - name: Commit and push README change
+      - name: Commit README change, remove workflow file, and push
         env:
           GIT_AUTHOR_NAME: github-actions[bot]
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
         run: |
           git config user.name "$GIT_AUTHOR_NAME"
           git config user.email "$GIT_AUTHOR_EMAIL"
+
+          # Commit README update
           git add README.md
           git commit -m "Automated README update" || true
-          git push
+          git push || true
+
+          # Remove this workflow file so it doesn't run again
+          git rm .github/workflows/update-readme-tomorrow.yml || true
+          git commit -m "Remove one-time README update workflow" || true
+          git push || true
