--- a/.github/workflows/daily-streak-maintenance.yml
+++ b/.github/workflows/daily-streak-maintenance.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Commit and push changes
         env:
-          GIT_AUTHOR_NAME: github-actions[bot]
-          GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
+          GIT_AUTHOR_NAME: Numba1ne
+          GIT_AUTHOR_EMAIL: emmanuelanthony357@gmail.com
         run: |
           git config user.name "$GIT_AUTHOR_NAME"
           git config user.email "$GIT_AUTHOR_EMAIL"
